// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleProgress should match snapshot with value 0 1`] = `
<div>
  <div
    aria-valuenow="0"
    class="radial-progress bg-base-200 text-base-content border-base-300/0 border-2 text-sm"
    role="progressbar"
    style="--value: 0; --size: 30px; --thickness: 2px;"
  >
    0
  </div>
</div>
`;

exports[`CircleProgress should match snapshot with value 50 1`] = `
<div>
  <div
    aria-valuenow="50"
    class="radial-progress bg-base-200 text-base-content border-base-300/0 border-2 text-sm"
    role="progressbar"
    style="--value: 50; --size: 30px; --thickness: 2px;"
  >
    5
  </div>
</div>
`;

exports[`CircleProgress should match snapshot with value 100 1`] = `
<div>
  <div
    aria-valuenow="100"
    class="radial-progress bg-base-200 text-base-content border-base-300/0 border-2 text-sm"
    role="progressbar"
    style="--value: 100; --size: 30px; --thickness: 2px;"
  >
    10
  </div>
</div>
`;
